Update .well-known manifest and openapi spec
