# server/main.py
@@ -1,99 +1,134 @@
-import os
-import io
-import json
-import code
 import sys
+import os
+import code
 import subprocess
-from typing import List, Annotated
-from fastapi import FastAPI, HTTPException, Depends, WebSocket, Request
-from fastapi.responses import FileResponse
+
+from fastapi import FastAPI, Request
 from fastapi.middleware.cors import CORSMiddleware
-from fastapi.responses import HTMLResponse
-from fastapi.templating import Jinja2Templates
+from fastapi.responses import FileResponse
 from fastapi.staticfiles import StaticFiles
-from contextlib import redirect_stderr, redirect_stdout
-import uvicorn
-from models.api import CodeExecutionRequest, CommandExecutionRequest
 from loguru import logger
-from slowapi import Limiter, _rate_limit_exceeded_handler
-from slowapi.util import get_remote_address
-from slowapi.errors import RateLimitExceeded
-from google.oauth2 import service_account
-import google.auth.transport.requests
-import httpx
+import uvicorn
 
-logger.remove()
-logger.add(sys.stderr, level="INFO")
+from models.api import CodeExecutionRequest, CommandExecutionRequest
+from executors.executor import PythonExecutor, CppExecutor, RustExecutor 
+from config import API_VERSION
 
-limiter = Limiter(key_func=get_remote_address)
+logger.configure(handlers=[{"sink": sys.stderr, "format": "<green>{time}</green> <level>{message}</level>", "colorize": True}])
+
 app = FastAPI()
-app.state.limiter = limiter
-app.add_exception_handler(RateLimitExceeded, _rate_limit_exceeded_handler)
 
+executors = {
+    "python": PythonExecutor(),
+    "c++": CppExecutor(),
+    "rust": RustExecutor(),
+}
+
+PORT = 8080
+
+origins = [
+    f"http://0.0.0.0:{PORT}",
+    "https://chat.openai.com",
+]
 
 app.mount("/static", StaticFiles(directory="static"), name="static")
-app.mount("/.well-known", StaticFiles(directory=".well-known"), name="well-known")
 
-@app.post("/repl")
-@limiter.limit("5/minute")
-async def repl(request: Request, code_execution_request: CodeExecutionRequest):
-    response = await send_request_to_gcloud_run(code_execution_request)
-    return response
+app.add_middleware(
+    CORSMiddleware,
+    allow_origins=origins,
+    allow_credentials=True,
+    allow_methods=["*"],
+    allow_headers=["*"],
+)
 
-async def send_request_to_gcloud_run(code_execution_request: CodeExecutionRequest):
-    url = os.environ.get('GOOGLE_CLOUD_RUN_URL')
+_SERVICE_AUTH_KEY = os.environ.get("SERVICE_AUTH_KEY")
 
-    # Load the service account key file
-    service_account_info = json.load(open('google-credentials.json'))
-
-    # Use the key to create credentials
-    credentials = service_account.Credentials.from_service_account_info(service_account_info)
-
-    # Create an access token
-    auth_req = google.auth.transport.requests.Request()
-    credentials.refresh(auth_req)
-    token = credentials.token
-
-    headers = {"Authorization": f"Bearer {token}", "Content-Type": "application/json"}
-    data = {"code": code_execution_request.code}
-    async with httpx.AsyncClient() as client:
-        response = await client.post(url, headers=headers, json=data)
-    return response.json()
-
-@app.get("/openapi.yaml")
-async def openapi_yaml():
-    try:
-        return FileResponse("openapi.yaml", media_type="text/yaml")
-    except FileNotFoundError:
-        raise HTTPException(
-            status_code=404, detail="OpenAPI specification file not found.")
+def assert_auth_header(req: Request):
+    """Asserts the presence of the correct authorization header in the request."""
+    assert req.headers.get(
+        "Authorization", None) == f"Bearer {_SERVICE_AUTH_KEY}"
 
 @app.get("/.well-known/ai-plugin.json")
-async def get_plugin_manifest():
-    try:
-        with open(".well-known/ai-plugin.json", "r") as f:
-            manifest = json.load(f)
-        return manifest
-    except FileNotFoundError:
-        raise HTTPException(status_code=404, detail="Manifest file not found.")
+async def get_manifest():
+    """Returns the manifest file."""
+    file_path = "./server/ai-plugin.json"
+    return FileResponse(file_path, media_type="application/json")
+
+@app.get("/.well-known/logo.png")
+async def get_logo():
+    """Returns the logo file."""
+    file_path = "./server/logo.png"
+    return FileResponse(file_path, media_type="text/json")
+
+@app.get("/.well-known/openapi.yaml")
+async def get_openapi():
+    """Returns the OpenAPI specification file."""
+    file_path = "./server/openapi.yaml"
+    return FileResponse(file_path, media_type="text/json")
+
+persistent_console = code.InteractiveConsole()
+
+@app.post(f"{API_VERSION}/repl")
+def repl(request: CodeExecutionRequest):
+    """Executes code in a REPL environment and returns the result."""
+    assert_auth_header(request)
+    logger.info(f"Received request for REPL execution: {request}")
     
-@app.get("/logo.png")
-async def logo_png():
+    executor = executors.get(request.language)
+    if executor is None:
+        return {"error": "Language not supported"}
+    
     try:
-        return FileResponse("logo.png", media_type="image/png")
-    except FileNotFoundError:
-        raise HTTPException(status_code=404, detail="Logo file not found.")
+        code_output = executor.execute(request.code)
+        logger.info(f"REPL execution result: {code_output}")
+        response = {"result": code_output.strip()}
+    except subprocess.CalledProcessError as e:
+        logger.error(f"Error in REPL execution: {e}. Return code: {e.returncode}. Output: {e.output}")
+        response = {
+            "error": str(e),
+            "returnCode": e.returncode,
+            "command": ' '.join(e.cmd),
+            "output": e.output
+        }
+        return response
+    except Exception as e:
+        logger.error(f"Error in REPL execution: {e}")
+        response = {"error": str(e)}
+        return response
+    
+    return response
 
-templates = Jinja2Templates(directory="templates")
-
-@app.get("/", response_class=HTMLResponse)
-async def root(request: Request):
-    return templates.TemplateResponse("index.html", {"request": request})
+@app.post(f"{API_VERSION}/command")
+async def command_endpoint(command_request: CommandExecutionRequest):
+    """Executes a shell command and returns the result."""
+    assert_auth_header(command_request)
+    logger.info(f"Executing command with request: {command_request}")
+    try:
+        command_result = await execute_command(command_request.command)
+        logger.info(f"Command execution result: {command_result}")
+        return {"result": command_result}
+    except Exception as e:
+        logger.error(f"Error in command execution: {e}")
+        return {"error": str(e)}
+    
+async def execute_command(command: str) -> str:
+    """Executes the given command in a shell and returns the result."""
+    try:
+        result = subprocess.run(
+            command.split(), capture_output=True, text=True)
+        return f"Result:\n{result.stdout}"
+    except subprocess.CalledProcessError as e:
+        logger.error(f"Error executing command: {e}. Return code: {e.returncode}. Output: {e.output}")
+        return {
+            "error": str(e),
+            "returnCode": e.returncode,
+            "command": ' '.join(e.cmd),
+            "output": e.output
+        }
+    except Exception as e:
+        logger.error(f"Error executing command: {e}")
+        return f"Error executing command: {str(e)}"
 
 def start():
-    port = int(os.environ.get("PORT", 8080))
-    uvicorn.run("server.main:app", host="0.0.0.0", port=port, reload=True)
-
-
-if __name__ == "__main__":
-    start()
+    """Starts the FastAPI server."""
+    uvicorn.run("server.main:app", host="0.0.0.0", port=PORT, reload=False)
